Added OAuth2 login(Google,GitHub, Facebook) + update + fix